tomcat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tomcat-deployment
  labels:
    name: tomcat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
        app: tomcat-deployment
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
        labels:
          app: tomcat-deployment
    spec:
      containers:
      - image: angelomalatacca/tomcat-deployment
        name:  tomcat-container
        ports:
        - containerPort:  8090
          name:  tomcat-port
      restartPolicy: Always
