tomcat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: tomcat-ingress
spec:
  rules:
  - host: tomcat-deploy
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8090
